Harden OpenMRS REST paths and scheduler tasks